--- a/android/build.gradle
+++ b/android/build.gradle
@@ -89,4 +89,9 @@ task run(type: Exec) {
     commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.valkyrie.game/com.valkyrie.game.AndroidLauncher'
 }
 
+dependencies {
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+}
+
 eclipse.project.name = appName + "-android"
